fixed hover divRow

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="border-top"></div>
                     <div class="profile d-flex align-center padding-x justify-start">
                         <img src="img/profile.svg" alt="profile">
-                        <p class="bold hidden padding-y">John Doe</p>
+                        <p class="bold hidden padding-y">Erica Ostini</p>
                     </div>
                 </div>
             </nav>
