--- a/pages/library.html
+++ b/pages/library.html
@@ -53,7 +53,7 @@
                     <div class="border-top"></div>
                     <div class="profile d-flex align-center padding-x justify-start">
                         <img src="../img/profile.svg" alt="profile">
-                        <p class="bold hidden padding-y">John Doe</p>
+                        <p class="bold hidden padding-y">Erica Ostini</p>
                     </div>
                 </div>
             </nav>
@@ -81,7 +81,7 @@
                 </section>
                 <section class="library-bar d-flex space-between align-center padding-x">
                     <div class="padding-x padding-y">
-                        <i class="fa-solid fa-circle-play green-play"></i>
+                        <i class="fa-solid fa-circle-play green-play padding-left"></i>
                         <i class="fa-regular fa-circle-down grey-text med-font"></i>
                     </div>
                     <div class="d-flex padding-x padding-y">
@@ -102,15 +102,15 @@
                 <section class="bar-song padding-x padding-y library-intro">
                     <div class="divTable">
                         <div class="headerRow border-bottom">
-                            <div class="divCell-plus"># <span class="padding-y">Titolo</span></div>
+                            <div class="divCell-plus padding-left"># <span class="padding-left">Titolo</span></div>
                             <div class="divCell">Album</div>
                             <div class="divCell">Aggiunto il giorno</div>
-                            <div class="divCell"><i class="fa-regular fa-clock"></i></div>
+                            <div class="divCell padding-left"><i class="fa-regular fa-clock"></i></div>
                         </div>
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <div class="soundwave-container play-bar-song">
+                                    <div class="soundwave-container padding-left play-bar-song">
                                         <div class="bar"></div>
                                         <div class="bar"></div>
                                         <div class="bar"></div>
@@ -125,17 +125,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="divCell"><a href="#" class="underline grey-text">Sinister</a></div>
-                            <div class="divCell">14 set 2023</div>
-                            <div class="divCell">
+                            <div class="divCell padding-top"><a href="#" class="underline grey-text">Sinister</a></div>
+                            <div class="divCell padding-top">14 set 2023</div>
+                            <div class="divCell padding-top">
                                 <i class="fa-solid fa-heart"></i>
                                 <span class="padding-y">1:54</span>
+                                <i class="fa-solid fa-ellipsis padding-left"></i>
                             </div>
                         </div>
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span class="padding-right">2</span>
+                                    <span class="padding-right padding-left">2</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/cure.jpeg" alt="cure">
                                         <p class="padding-y">
@@ -145,17 +146,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="divCell"><a href="#" class="underline grey-text">Wellness</a></div>
-                            <div class="divCell">14 set 2023</div>
-                            <div class="divCell">
+                            <div class="divCell padding-top"><a href="#" class="underline grey-text">Wellness</a></div>
+                            <div class="divCell padding-top">14 set 2023</div>
+                            <div class="divCell padding-top">
                                 <i class="fa-solid fa-heart"></i>
                                 <span class="padding-y">2:38</span>
+                                <i class="fa-solid fa-ellipsis padding-left"></i>
                             </div>
                         </div>
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span class="padding-right">3</span>
+                                    <span class="padding-right padding-left">3</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/metal_lifting.jpg" alt="metal">
                                         <p class="padding-y">
@@ -165,17 +167,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="divCell"><a href="#" class="underline grey-text">Metal</a></div>
-                            <div class="divCell">6 set 2023</div>
-                            <div class="divCell">
+                            <div class="divCell padding-top"><a href="#" class="underline grey-text">Metal</a></div>
+                            <div class="divCell padding-top">6 set 2023</div>
+                            <div class="divCell padding-top">
                                 <i class="fa-solid fa-heart"></i>
                                 <span class="padding-y">3:24</span>
+                                <i class="fa-solid fa-ellipsis padding-left"></i>
                             </div>
                         </div>
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span class="padding-right">4</span>
+                                    <span class="padding-right padding-left">4</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/split.jpeg" alt="split">
                                         <p class="padding-y">
@@ -185,11 +188,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="divCell"><a href="#" class="underline grey-text">Split</a></div>
-                            <div class="divCell">28 ago 2023</div>
-                            <div class="divCell">
+                            <div class="divCell padding-top"><a href="#" class="underline grey-text">Split</a></div>
+                            <div class="divCell padding-top">28 ago 2023</div>
+                            <div class="divCell padding-top">
                                 <i class="fa-solid fa-heart"></i>
                                 <span class="padding-y">1:49</span>
+                                <i class="fa-solid fa-ellipsis padding-left"></i>
                             </div>
                         </div>
                 </section>
