background library page

--- a/pages/library.html
+++ b/pages/library.html
@@ -58,7 +58,7 @@
                 </div>
             </nav>
             <div id="main-content">
-                <section class="d-flex align-center library-intro">
+                <section class="d-flex align-center wrap library-intro">
                     <div class="heart-container">
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -66,7 +66,7 @@
                         <ul class="padding-y">
                             <li>Playlist</li>
                             <li><h1 class="title">Brani che ti piacciono</h1></li>
-                            <li>
+                            <li class="padding-top">
                                 <div class="profile d-flex align-center">
                                     <img src="../img/profile.svg" alt="player">
                                     <p>
