fixed background library page

--- a/pages/library.html
+++ b/pages/library.html
@@ -22,7 +22,7 @@
                     <img src="../img/logo-small.svg" alt="small logo" class="small-logo">
                     <ul class="list padding-x bold">
                         <li class="side-green">
-                            <a href="#" class="grey-text"><i class="fa-solid fa-house padding-y"></i> <span class="hidden">Home</span></a>
+                            <a href="../index.html" class="grey-text"><i class="fa-solid fa-house padding-y"></i> <span class="hidden">Home</span></a>
                         </li>
                         <li class="side-green">
                             <a href="#" class="grey-text"><i class="fa-solid fa-magnifying-glass padding-y"></i><span class="hidden">Cerca
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </nav>
-            <div id="main-content">
+            <div id="main-content" class="gradient">
                 <section class="d-flex align-center wrap library-intro">
                     <div class="heart-container">
                         <i class="fa-solid fa-heart"></i>
